[tool.poetry]
name = "classy"
version = "0.1.0"
description = ""
authors = ["andgate <the.andgate@gmail.com>"]
readme = "README.md"
packages = [{ include = "classy", from = "libs" }]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ipykernel = "6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
